<resources>
    <string name="app_name">MyAnimeZ</string>
    <string name="top_anime">Top Anime</string>
    <string name="top_tv">Top TV</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_airing">Top Airing</string>
    <string name="top_movie">Top Movie</string>
    <string name="main">Main</string>
    <string name="genres">Genres</string>
    <string name="characters">Characters</string>
    <string name="recommendations">Recommendations</string>
    <string name="sorry_no_data">Sorry, No Data</string>
    <string name="top">Top</string>
    <string name="top_manga">Top Manga</string>
</resources>
