<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Fragment.AnimeDetailsFragment"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >


    <LinearLayout
        android:id="@+id/anime_details_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >

            <ImageView
                android:id="@+id/anime_details_image"
                android:layout_width="120dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp"
                >

                <TextView
                    android:id="@+id/anime_details_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textColor="@color/white"
                    android:layout_margin="3dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/anime_details_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/gray"
                    android:layout_margin="3dp"
                    />

                <TextView
                    android:id="@+id/anime_details_premiered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/gray"
                    android:layout_margin="3dp"
                    />

                <TextView
                    android:id="@+id/anime_details_episodes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:textColor="@color/gray"
                    />

                <TextView
                    android:id="@+id/anime_details_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:textColor="@color/gray"
                    />

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="110dp"
         app:cardCornerRadius="10dp"
         app:cardBackgroundColor="@color/colorPrimary"
         android:layout_margin="10dp"
         >

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="10dp"
             android:orientation="horizontal"
             >

             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_weight="1"
                 android:layout_gravity="center"
                 >

                 <ImageView
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:src="@drawable/icons_star"
                     android:layout_gravity="center"
                     android:scaleType="centerCrop"
                     />

                 <TextView
                     android:id="@+id/anime_details_rating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
                     android:textSize="18sp"
                     android:textColor="@color/white"
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:textStyle="bold"
                     />

                 <TextView
                     android:id="@+id/anime_details_scored_by"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="13sp"
                     android:textColor="@color/gray"
                     android:gravity="center"
                     android:layout_gravity="center"
                     />

             </LinearLayout>

             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_weight="1"
                 android:layout_gravity="center"
                 android:id="@+id/anime_details_favourite"
                 >

                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:src="@drawable/ic_favourite_border"
                     android:layout_gravity="center"
                     android:id="@+id/anime_details_favourite_icon"
                     />

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14dp"
                     android:text="Favourite"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:textColor="@color/white"
                     />

             </LinearLayout>

         </LinearLayout>

     </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Summary"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="5dp"
            />

         <TextView
             android:id="@+id/anime_details_summary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|left"
             android:textColor="@color/white"
             android:textSize="13sp"
             />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Source:"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/anime_details_source"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:paddingLeft="2dp"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Airing:"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/anime_details_airing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:paddingLeft="2dp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Duration:"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/anime_details_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:paddingLeft="2dp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genres"
                android:textColor="@color/white"
                android:padding="7dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:gravity="center"
                />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/anime_details_genres"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="7dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/characters"
                android:textColor="@color/white"
                android:padding="7dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:gravity="center"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/anime_details_character_recycleview"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/colorPrimary"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="7dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendations"
                    android:textColor="@color/white"
                    android:padding="7dp"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/anime_details_recommendations_recycleview"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/anime_details_error_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_error"
            android:layout_gravity="center"
            >
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Sorry Try Again Later"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/anime_details_reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:text="Reload"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/anime_details_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>